# hacklspy

./: .gitignore  .gitmodules  README.md  pyproject.toml
cmd/: server.py  ts_test.py
data/: sum_to_100.hasm
src/hacklsp/: langserver.py  language.py  logger.py  parser.py  rebuild_lang.py
src/hacklsp/features/: __init__.py  completion.py  descriptions.py  doc_close.py  doc_crud.py  doc_open.py  hackasm_server.py  hover.py  initialize.py  keywords.py  node_utils.py
src/hacklsp/parser/: __init__.py  language.py  parser.py  queries.py
